<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyAndroid</string>
    <string name="imageviewapp">网络图片浏览</string>
    
    <string name="alt">图片</string>
    <string name="imageapp_info">请输入图片地址</string>
    <string name="imageapp_defurl">http://i1.sinaimg.cn/travel/2014/0815/U9385P704DT20140815171127.jpg</string>
    <string name="imageapp_btn_text">下载显示</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="htmlapp_editinfo">请输入html路径</string>
    <string name="htmlapp_btn">GO</string>
    <string name="htmlapp">HTML查看器</string>
    <string name="htmlapp_defs">http://www.baidu.com</string>

    
    <string name="loginapp_uname">请输入用户名</string>
    <string name="loginapp_pword">请输入密码</string>
    <string name="loginapp">提交登录数据到服务器</string>
    <string name="loginapp_btn">Get登录</string>
    <string name="loginapp_btn2">Post登录</string>
    
    <string name="smartimgapp">smartimageview演示</string>
</resources>
