<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginapp_uname" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/loginapp_pword"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/submitbtn"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:layout_weight="1"
            android:onClick="onBtnClick"
            android:text="@string/loginapp_btn"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/submitbtn2"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBtnClick"
            android:text="@string/loginapp_btn2"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>